# pqc-bench

./: .gitignore  .zenodo.json  README.md  pyproject.toml
.github/workflows/: ci.yml
domains/goose/: README.md  bench_cortexm.py  budgets.py
domains/goose/data/: LICENSE.md
domains/goose/data/pcap/: goose_l2sec_ecdsa.pcap  goose_sample_baseline.pcap  goose_session_falcon.pcap
domains/goose/data/raw/aarch64_keygen/: Falcon-512.csv  ML-DSA-44.csv  ML-DSA-65.csv
domains/goose/data/raw/aarch64_liboqs/: Falcon-512.csv  ML-DSA-44.csv  ML-DSA-65.csv  manifest.json  summary.jsonl
domains/goose/data/raw/m0p-nofpu/: MANIFEST.json  falcon-512_clean_speed.csv  ml-dsa-44_clean_speed.csv  ml-kem-512_clean_speed.csv
domains/goose/data/raw/m4f-sp/: MANIFEST.json  falcon-512_clean_dudect.csv  falcon-512_clean_dudect_key.csv  falcon-512_clean_dudect_msg.csv  falcon-512_clean_hashing.csv  falcon-512_clean_speed.csv  falcon-512_clean_speedfast.csv  falcon-512_clean_stack.csv  fndsa512_stm32f407_m4f.json  fndsa_provisional-512_m4f_dudect.csv  fndsa_provisional-512_m4f_dudect_key.csv  fndsa_provisional-512_m4f_dudect_msg.csv  fndsa_provisional-512_m4f_hashing.csv  fndsa_provisional-512_m4f_speed.csv  fndsa_provisional-512_m4f_speedfast.csv  fndsa_provisional-512_m4f_stack.csv  hmac-sha256_speedfast.csv  ml-dsa-44_m4f_hashing.csv  ml-dsa-44_m4f_speed.csv  ml-dsa-44_m4f_speedfast.csv  ml-dsa-44_m4f_stack.csv  ml-dsa-65_m4f_hashing.csv  ml-dsa-65_m4f_speed.csv  ml-dsa-65_m4f_speedfast.csv  ml-dsa-65_m4f_stack.csv  ml-kem-512_m4fspeed_speed.csv  sphincs-sha2-128f-simple_clean_hashing.csv  sphincs-sha2-128f-simple_clean_speed.csv  sphincs-sha2-128f-simple_clean_speedfast.csv  sphincs-sha2-128f-simple_clean_stack.csv  sphincs-sha2-128s-simple_clean_hashing.csv  sphincs-sha2-128s-simple_clean_speed.csv  sphincs-sha2-128s-simple_clean_speedfast.csv  sphincs-sha2-128s-simple_clean_stack.csv
domains/goose/data/raw/m7-dp/: MANIFEST.json  falcon-512_clean_speed.csv  falcon-512_clean_speedfast.csv  fndsa_provisional-512_m4f_speed.csv  ml-dsa-44_m4f_speed.csv  ml-dsa-44_m4f_speedfast.csv  ml-dsa-65_m4f_speed.csv  ml-kem-512_m4fspeed_speed.csv  sphincs-sha2-128f-simple_clean_speed.csv  sphincs-sha2-128s-simple_clean_speed.csv
domains/goose/data/raw/x86_64/: EC.csv  ML-DSA-44.csv  ML-DSA-65.csv  SLH-DSA-SHA2-128f.csv  SLH-DSA-SHA2-128s.csv  falcon512.csv  manifest.json  p256_falcon512.csv  p256_mldsa44.csv  summary.jsonl
domains/goose/firmware/: README.md  dudect.c  hmac.c  pqm4-cortexm-bench.patch  speedfast.c
domains/goose/firmware/rp2040/: CMakeLists.txt  main.c
domains/goose/firmware/rp2040/shim/: features.h
domains/goose/goose/: make_goose_frame.py
domains/v2x/: README.md  budgets.py
env/: activate.sh  openssl-oqs.cnf  requirements.txt
src/pqc_bench/: README.md  __init__.py  algorithms.py  bench.py  cli.py  report.py
src/pqc_bench/harness/: Makefile  bench_keygen.c  bench_keygen_oqs.c  run_bench.sh
(+19 files in other folders)
